# agentic-incident-management

./: .env.example  .gitignore  ProcedureGuard_Agent3_Report.docx  README.md  RUN-102_grouped.json  RUN-102_incidents.json  RUN-103_grouped.json  RUN-103_incidents.json  RUN-103_verdicts.json  RUN-104_incidents.json  RUN-104_verdicts.json  RUN-105_grouped.json  RUN-105_incidents.json  RUN-105_verdicts.json  aims_ui.py  incident_viewer.py  notifications.py  procedureguard_ui.py  pyproject.toml  root_cause_agent.py  sample_verdicts_input.json  sla.py  sla_agent.py  test_ui.py  view_incidents.py
aims/agents/: incident_management.py  sla.py
aims/ui/: __init__.py  app.py  incident_viewer.py
data/checklists/: RUN-102_compliance_checklist.json  RUN-102_steps.json
data/diagnoses/: RUN-102_grouped.json  RUN-103_grouped.json  RUN-104_grouped.json
data/incidents/: RUN-102_incidents.json  RUN-103_incidents.json
data/verdicts/: RUN-103_verdicts.json  RUN-104_verdicts.json
layer3/agent3/: .env.example  incident_management_agent.py  requirements.txt
tests/: test_ui.py
